# face-recognization

backend_ai/: .env.example  .gitignore  README.md  SYSTEM_DESIGN_BACKEND_AI_API.md  pyproject.toml  requirements.txt
backend_ai/app/: config.py  main.py
backend_ai/app/api/: routes.py  schemas.py
backend_ai/app/core/: batch_queue.py  camera_state_manager.py  camera_worker.py  exceptions.py  pipeline.py  pipeline_v2.py  shared_ai_service.py
backend_ai/app/services/: __init__.py  advanced_knife_detector.py  embedding_searcher.py  face_detector.py  face_recognizer.py  knife_detector.py  logger_service.py  person_detector.py  result_builder.py  stream_reader.py  track_memory.py  tracker.py  weapon_detector.py
backend_ai/scripts/: build_face_embeddings.py  test_camera.py  test_rtsp.py
backend_ai/tests/: test_person_detector.py  test_result_builder.py  test_track_memory.py  test_weapon_detector.py
